# call-me-maybe

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
data/output/: function_calling_results.json
src/: __main__.py  constrained_decoder.py  function_caller.py  loader.py  logger.py  models.py  vocabulary.py  writer.py
