[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llm-sdk>=1.0.1",
    "numpy>=2.2.6",
    "pydantic>=2.13.1",
    "tqdm>=4.67.3",
    "fire>=0.7.1",
    "colorama>=0.4.6",
]

[tool.uv.workspace]
members = [
    "llm_sdk",
]

[tool.uv.sources]
llm-sdk = { workspace = true, editable = true }
